...
    
    private func makeResultMessage() -> QuizResultsViewModel {
        guard let statisticService else { return QuizResultsViewModel(title: "", text: "", buttonText: "");}
        statisticService.store(correct: correctAnswers, total: questionsAmount)
        
        let result = QuizResultsViewModel(
            title: "Этот раунд окончен!",
            text:"Ваш результат \(correctAnswers)/\(questionsAmount) \n Количество сыгранных квизов \(statisticService.gamesCount) \n Рекорд: \(statisticService.bestGame.correct) / \(statisticService.bestGame.total) (\(statisticService.bestGame.date.dateTimeString)) \n Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%" ,
            buttonText: "Сыграть еще раз"
        )
        
        return result
    }
...
